@@ -28,7 +28,6 @@ gnulib_modules='
 	fcntl-safer
 	fdl
 	getopt
-	stat-macros
 	stat-time
 	sys_stat
 	utimens
