@@ -1,5 +1,16 @@
 2006-12-04  Paul Eggert  <eggert@cs.ucla.edu>
 
+	* NEWS: Describe the following change briefly.
+	* bootstrap.conf (gnulib_modules): Remove stat-macros; no longer
+	needed.
+	* gzip.c: Don't include stat-macros.h; no longer needed.
+	(treat_file): Refuse to compress files that are setuid, or setgid,
+	as this can in theory lead to security holes.  Also, refuse to
+	compress files with the sticky bit set, on general principle.
+	(copy_stat): Don't copy the setuid, setgid, or sticky bits,
+	as (given the above change) they'll always be zero here.
+	Invoke chmod before chown, to close a race condition.
+
 	* .cvsignore: Add *.doc, build-aux.
 	* doc/.cvignore: New file.
 	* lib/.cvsignore: New file.
